side links added to all homepages

--- a/ipu/static/account/css/base.css
+++ b/ipu/static/account/css/base.css
@@ -2,3 +2,14 @@ body{
 	background-size: 100% 100%;
 }
 
+.card::after {
+    content: " ";
+    position: absolute;
+    display: none;
+    top: 2%;
+    right: 100%;
+    margin-top: -5px;
+    border-width: 7px;
+    border-style: solid;
+    border-color: transparent #546e7a transparent transparent;
+}
