--- a/ipu/templates/account/navbar_with_tabs.html
+++ b/ipu/templates/account/navbar_with_tabs.html
@@ -53,7 +53,7 @@
         </ul>
         <ul id="dropdown2" class="dropdown-content">
             {% block menu_icon_dropdown %}
-                <li><a href="#!">wrgwearg</a></li>
+                <li><a href="">temp</a></li>
                 <li class="divider"></li>
             {% endblock %} 
         </ul>
@@ -94,7 +94,7 @@
 					<a class="brand-logo center hide-on-med-and-down" style="color:lightcoral;font-weight:800;">{% block pagetitle %}{% endblock %}</a>
                     <ul class="right">
                     <li class="hide-on-small-only">
-                    <a href="{% block home_url4 %}{% endblock %}"><i class="fa fa-2x fa-home" aria-hidden="true"></i></a>
+                    <a style="height: 64px;" href="{% block home_url4 %}{% endblock %}"><i class="fa fa-2x fa-home" aria-hidden="true"></i></a>
                     </li>
                    	<li><a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='flex';document.getElementById('fade').style.display='flex'"><i class="material-icons">search</i></a>
                   	</li>
