--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -187,7 +187,8 @@
 			</div>
 		</div>
 	</div>
-	<div id="sessions" class="col s12"></div>
+	<div id="sessions" class="col s12">
+	</div>
 
 	{% if badge %}
 		<span class="badge" id="notifications_badge">{{ badge }}</span>
