--- a/ipu/templates/faculty/home.html
+++ b/ipu/templates/faculty/home.html
@@ -61,36 +61,36 @@
 
 {% block side_nav_links %}
 	{% if perms.student.verify_student %}
-    <li><a class="waves-effect" href="#!"><i class="fa fa-user" aria-hidden="true"></i>
+    <li data-main_div="#verify"><a class="waves-effect" href="#!"><i class="fa fa-user" aria-hidden="true"></i>
           Verify Student</a></li>
     {% endif %}
 
     {% if perms.recruitment.handle_placement %}
-	<li><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>
+	<li data-main_div="#tab2"><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>
           College Associations</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-envelope" aria-hidden="true"></i> 
+    <li data-main_div="#requests"><a class="waves-effect" href="#!"><i class="fa fa-envelope" aria-hidden="true"></i> 
           Association Requests</a></li>
 	{% endif %}
 
 	{% if perms.recruitment.handle_placement %}
-	<li><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
+	<li data-main_div="#sessions"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
             Sessions</a></li>
 	{% endif %}  
     {% if perms.notification.manage_notification %}        
-    <li><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications</a></li>
+    <li data-main_div="#notifications"><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications</a></li>
     {% endif %}
     <li class="no-padding">
         <ul class="collapsible collapsible-accordion">
-          <li>
+          <li data-main_div="#settings" class="expandable">
             <a class="collapsible-header"><i class="fa fa-cog" aria-hidden="true"></i>
             Settings</a>
             <div class="collapsible-body">
               <ul>
-                <li><a href="#!"><i class="fa fa-sliders" aria-hidden="true"></i>
+                <li class="child-li" data-child_div="#account-settings"><a href="#!"><i class="fa fa-sliders" aria-hidden="true"></i>
                     Account Settings</a></li>
-                <li><a href="#!"><i class="fa fa-users" aria-hidden="true"></i>
+                <li class="child-li" data-child_div="#social-settings"><a href="#!"><i class="fa fa-users" aria-hidden="true"></i>
                       Social Profile Settings</a></li>
-                <li><a href="#!"><i class="fa fa-wrench" aria-hidden="true"></i>
+                <li class="child-li" data-child_div="#profile-settings"><a href="#!"><i class="fa fa-wrench" aria-hidden="true"></i>
                  Profile Settings</a></li>
               </ul>
             </div>
@@ -260,6 +260,7 @@
 	<script type="text/javascript" src="{% static 'notification/faculty.js' %}"></script>
 	<script type="text/javascript" src="{% static 'faculty/verify.js' %}"></script>
 	<script type="text/javascript" src="{% static 'recruitment/requests.js' %}"></script>
+	<script type="text/javascript" src="{% static 'common/mobile.js' %}"></script>
 	<script>
 		$(document).ready(function() {
 			Search.init();
@@ -268,6 +269,7 @@
 			Settings.init(['edit-account-form', 'edit-profile-form', 'social-profile-form']);
 			VerifyStu.init();
 			Request.init();
+			Mobile.init();
 		});
 	</script>
 {% endblock scripts %}
