--- a/ipu/templates/company/home.html
+++ b/ipu/templates/company/home.html
@@ -61,26 +61,26 @@
 {% endblock %}
 
 {% block side_nav_links %}
-    <li><a class="waves-effect" href="#!" style=""><i class="fa fa-building" aria-hidden="true"></i>
+    <li data-main_div="#associate"><a class="waves-effect" href="#!" style=""><i class="fa fa-building" aria-hidden="true"></i>
           Associate Colleges</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-envelope" aria-hidden="true"></i> 
-          Association Requests</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications</a></li>     
-    <li><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
+    <li data-main_div="#requests"><a class="waves-effect" href="#!"><i class="fa fa-envelope" aria-hidden="true"></i> 
+          Association Requests</a></li>      
+    <li data-main_div="#notifications"><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications</a></li>     
+    <li data-main_div="#sessions"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
             Sessions</a></li>
     
     <li class="no-padding">
         <ul class="collapsible collapsible-accordion">
-          <li>
+          <li data-main_div="#settings" class="expandable">
             <a class="collapsible-header"><i class="fa fa-cog" aria-hidden="true"></i>
             Settings</a>
             <div class="collapsible-body">
               <ul>
-                <li><a href="#!"><i class="fa fa-sliders" aria-hidden="true"></i>
+                <li class="child-li" data-child_div="#account-settings"><a href="#!"><i class="fa fa-sliders" aria-hidden="true"></i>
                     Account Settings</a></li>
-                    <li><a href="#!"><i class="fa fa-wrench" aria-hidden="true"></i>
+                <li class="child-li" data-child_div="#profile-settings"><a href="#!"><i class="fa fa-wrench" aria-hidden="true"></i>
                    Profile Settings</a></li>
-                <li><a href="#!"><i class="fa fa-users" aria-hidden="true"></i>
+                <li class="child-li" data-child_div="#social-settings"><a href="#!"><i class="fa fa-users" aria-hidden="true"></i>
                       Social Profile Settings</a></li>
                 
               </ul>
@@ -95,8 +95,8 @@
 {% block tabs%}
 	<li class="tab col s3"><a class="active" href="#associate">Associate with colleges</a></li>
 	<li id = "request" class="tab col s3" data-url="/college/association_requests/"><a href="#requests">Association Requests</a></li>
-	<li class="tab col s3"><a href="#settings">Settings</a></li>
-	<li id="session" class="tab col s3"><a href="#sessions">Sessions</a></li>
+	<li class="tab col s2"><a href="#settings">Settings</a></li>
+	<li id="session" class="tab col s2"><a href="#sessions">Sessions</a></li>
 {% endblock %}
 
 {% block tabs_content %}
@@ -160,6 +160,7 @@
 	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
 	<script type="text/javascript" src="{% static 'recruitment/requests.js' %}"></script>
 	<script type="text/javascript" src="{% static 'recruitment/associate.js' %}"></script>
+	<script type="text/javascript" src="{% static 'common/mobile.js' %}"></script>
 	<script>
 		$(document).ready(function() {
 			Search.init();
@@ -167,6 +168,8 @@
 			Settings.init(['edit-account-form', 'edit-profile-form', 'social-profile-form']);
 			Associate.init(['associate-form']);
 			Request.init();
+			Mobile.init();
 		});
+
 	</script>
 {% endblock scripts %}
