--- a/ipu/templates/dummy_company/manage_dummy_company.html
+++ b/ipu/templates/dummy_company/manage_dummy_company.html
@@ -25,6 +25,12 @@
 	{{ college.get_short_name }}
 {% endblock %}
 
+{% block menu_icon_dropdown %}
+                <li><a href="{% url 'manage_faculty' %}" >Manage Faculty</a></li>
+                <li class="divider"></li>
+                <li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
+{% endblock %}
+
 {% block user_email_id_s %}
 	{{ college.profile.email }}
 {% endblock %}
@@ -54,7 +60,71 @@
 {% endblock %}
 
 {% block lightbox_data %}
+<style type="text/css">
+	.black_overlay3{
+      display: none;
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 100%;
+      background-color: black;
+      z-index:1001;
+      -moz-opacity: 0.0;
+      opacity: .0;
+      filter: alpha(opacity=0);
+    }
+    .white_content3 {
+      display: none;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      width: 100%;
+      height: 100%;
+      padding: 16px;
+      background-color: black;
+      z-index:1002;
+      overflow: auto;
+      -moz-opacity: 0.92;
+      opacity: .92;
+      filter: alpha(opacity=9.2);
+    }
+    
+    
+    .white_content3 i
+    {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        color: white;
+    }
+
+    #form-box
+    {
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      position: absolute;
+      top: 2%;
+      left: 25%;
+      width: 50%;
+      height: 96%;
+      padding: 16px;
+      background-color: white;
+      z-index:1003;
+      overflow: auto;
+      color: black;
+      border-radius: 5px;
+
+    }
+</style>
 	<div id="light3" class="white_content3">
+		<div id="form-box">
 		<h4 style="color: goldenrod;">Notify All Students</h4>
 		<form method='POST' action="#!" id="notify-session-students-form">
 			{% csrf_token %}
@@ -62,7 +132,9 @@
 			<div class="row center">
 				<button class="btn btn-waves" style="width: 100%">Submit</button>
 			</div>
+
 		</form>
+		</div>
 		<a href = "javascript:void(0)" onclick = "document.getElementById('light3').style.display='none'; document.getElementById('fade3').style.display='none'; "><i class="fa fa-times fa-2x"></i></a>
 	</div>
 	<div id="fade3" class="black_overlay3"></div>
