--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -89,35 +89,36 @@
 {% endblock %}
 
 {% block side_nav_links %}
-    <li><a class="waves-effect" href="#!"><i class="fa fa-user" aria-hidden="true"></i>
+    <li data-main_div="#profile"><a class="waves-effect" href="#!"><i class="fa fa-user" aria-hidden="true"></i>
           Update Profile</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-book" aria-hidden="true"></i> 
+    <li data-main_div="#qualifications"><a class="waves-effect" href="#!"><i class="fa fa-book" aria-hidden="true"></i> 
           Update Qualifications</a></li>  
-    <li><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>
+    <li data-main_div="#companies"><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>
           Companies Visiting</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
+    <li data-main_div="#sessions"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
             Sessions</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications<span class="new badge" id="mobile-noti-badge">1</span></a></li>
+    <li data-main_div="#notifications"><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications<span class="new badge" id="mobile-noti-badge">1</span></a></li>
     <li class="no-padding">
         <ul class="collapsible collapsible-accordion">
-          <li>
+          <li data-main_div="#settings" class="expandable">
             <a class="collapsible-header"><i class="fa fa-cog" aria-hidden="true"></i>
             Settings</a>
             <div class="collapsible-body">
               <ul>
-                <li><a href="#!"><i class="fa fa-sliders" aria-hidden="true"></i>
+                <li class="child-li" data-child_div="#account-settings"><a href="#!"><i class="fa fa-sliders" aria-hidden="true"></i>
                     Account Settings</a></li>
-                <li><a href="#!"><i class="fa fa-upload" aria-hidden="true"></i>
+                <li class="child-li" data-child_div="#upload-settings"><a href="#!"><i class="fa fa-upload" aria-hidden="true"></i>
                   Upload Image/Resume</a></li>
-                <li><a href="#!"><i class="fa fa-users" aria-hidden="true"></i>
+                <li class="child-li" data-child_div="#social-settings"><a href="#!"><i class="fa fa-users" aria-hidden="true"></i>
                       Social Profile Settings</a></li>
-                <li><a href="#!"><i class="fa fa-wrench" aria-hidden="true"></i>
+                <li class="child-li" data-child_div="#tech-settings"><a href="#!"><i class="fa fa-wrench" aria-hidden="true"></i>
                   Technical Profile Settings</a></li>
               </ul>
             </div>
           </li>
         </ul>
       </li>
+      
 {% endblock %}
 
 {% block tabs%}
@@ -242,6 +243,7 @@
 	<script type="text/javascript" src="{% static 'student/update.js' %}"></script>
 	<script type="text/javascript" src="{% static 'notification/student.js' %}"></script>
 	<script type="text/javascript" src="{% static 'student/apply.js' %}"></script>
+	<script type="text/javascript" src="{% static 'common/mobile.js' %}"></script>
 	<script src="{% static 'sweetalert/dist/sweetalert.min.js' %}"></script>
 	<script>
 		$(document).ready(function() {
@@ -251,6 +253,7 @@
 			Apply.init();
 			Settings.init(['edit-account-form', 'upload-file-form', 'social-profile-form', 'tech-profile-form']);
 			Update.init(['edit-student-form', 'edit-qual-form']);
+			Mobile.init();
 		});
 	</script>
 {% endblock scripts %}
