--- a/ipu/templates/account/forgot_password_email_body_text.html
+++ b/ipu/templates/account/forgot_password_email_body_text.html
@@ -1,7 +1,7 @@
 {% autoescape off %}
-Hey <b>{{ username }}</b>!
+{{ greeting }}
 
-To initiate the password reset process for your GGSIPU Training &amp; Placement Cell Account,
+To initiate the password reset process for your GGSIPU Training & Placement Cell account,
 click the link below:
 
 {{ protocol }}://{{ domain }}{% url 'reset_password' user_hashid=user_hashid token=token %}
@@ -10,13 +10,13 @@ If clicking the link above doesn't work, please copy and paste the URL in a new 
 window instead.
 
 
-Note: The reset link will be valid only for <b>{{ days }}</b> day{{ days|pluralize }}.
+Note: The reset link will be valid only for {{ days }} day{{ days|pluralize }}.
 
 
 Sincerely,
 
-Development &amp; Maintenance Team
-Training &amp; Placement Cell,
+Development & Maintenance Team
+Training & Placement Cell
 Guru Gobind Singh Indraprastha University
 
 {% endautoescape %}
