--- a/ipu/templates/company/home.html
+++ b/ipu/templates/company/home.html
@@ -66,7 +66,7 @@
     <li data-main_div="#requests"><a class="waves-effect" href="#!"><i class="fa fa-envelope" aria-hidden="true"></i> 
           Association Requests</a></li>      
     <li data-main_div="#notifications"><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications</a></li>     
-    <li data-main_div="#sessions"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
+    <li data-main_div="#sessions_div"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
             Sessions</a></li>
     
     <li class="no-padding">
@@ -96,7 +96,7 @@
 	<li class="tab col s3"><a class="active" href="#associate">Associate with colleges</a></li>
 	<li id = "request" class="tab col s3" data-url="/college/association_requests/"><a href="#requests">Association Requests</a></li>
 	<li class="tab col s2"><a href="#settings">Settings</a></li>
-	<li id="session" class="tab col s2"><a href="#sessions">Sessions</a></li>
+	<li id="session" class="tab col s2"><a href="#sessions_div">Sessions</a></li>
 {% endblock %}
 
 {% block tabs_content %}
@@ -156,11 +156,26 @@
 		</div>
 	</div>
 
-	<div id="sessions" class="col s12"></div>
+	<div id="sessions_div" class="col s12"></div>
 
 	{% if badge %}
 		<span class="badge" id="notifications_badge">{{ badge }}</span>
 	{% endif %}
+
+<!-- Session Filter Forms' SideNav -->
+<ul id="session-filter-forms-out" class="side-nav">
+	<li>
+		<form data-filter="sessions" class="session-filter-form col s12 m10 offset-m1" method="POST" action="{% url 'filter_sessions' %}">
+			{% csrf_token %}
+			<h1 class="subheader">Session Filter Form</h1>
+			{% form form=session_filter_form %}{% endform %}
+			<div class="row">
+				<button class="col s12 btn btn-waves" type="submit">Filter</button>
+			</div>
+		</form>
+	</li>
+  </ul>
+  <!-- -->
 {% endblock %}
 
 {% block scripts %}
