--- a/ipu/templates/recruitment/manage_session.html
+++ b/ipu/templates/recruitment/manage_session.html
@@ -12,6 +12,10 @@
                 <li class="divider"></li>
                 <li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
 {% endblock %}
+{% block head %}
+	<link rel="stylesheet" type="text/css" href="{% static 'sweetalert/dist/sweetalert.css' %}">
+{% endblock head %}
+
 {% block tabs %}
 	<li class="tab col s2"><a class="active" href="#session-details">Details</a></li>
 	<li class="tab col s2"><a class="" href="#session-students">Manage Session Students</a></li>
