--- a/ipu/templates/account/activation_email_html.html
+++ b/ipu/templates/account/activation_email_html.html
@@ -3,14 +3,13 @@
 <br>
 To activate your <u>GGSIPU Training &amp; Placement Cell</u> account,
 click the link below:<br><br>
-{% if type == 'F' %}
-	<a href="{{ protocol }}://{{ domain }}{% url 'faculty_activation' user_hashid=user_hashid token=token %}">{{ protocol }}://{{ domain }}{% url 'faculty_activation' user_hashid=user_hashid token=token %}</a>
+{% if type == 'F' or type == 'C' %}
+	<a href="{{ protocol }}://{{ domain }}{% url 'usable_pwd_activation' user_hashid=user_hashid token=token %}">{{ protocol }}://{{ domain }}{% url 'usable_pwd_activation' user_hashid=user_hashid token=token %}</a>
 <br><br>
 	If clicking the link above doesn't work, then please copy and paste the URL in a new browser window instead.
 <br><br>
 	<b>Note:</b> Please open the link in a safe environment as you'll be required to set a new password.
 {% else %}
-	{{ protocol }}://{{ domain }}{% url 'activate' user_hashid=user_hashid token=token %}
 	<a href="{{ protocol }}://{{ domain }}{% url 'activate' user_hashid=user_hashid token=token %}">{{ protocol }}://{{ domain }}{% url 'activate' user_hashid=user_hashid token=token %}</a>
 <br><br>
 	If clicking the link above doesn't work, then please copy and paste the URL in a new browser window instead.
