--- a/ipu/static/account/css/base_home_layout.css
+++ b/ipu/static/account/css/base_home_layout.css
@@ -625,7 +625,7 @@ form#search input {
 }
 
 #tabs-data-div > div {
-	margin-top: 5%;
+	margin-top: 2%;
 }
 
 .side-nav i
@@ -798,7 +798,7 @@ form h5 {
 	text-align: center;
 }
 
-/*#main-tabs .collapsible-header i{
+/*#sideNav-tabs .collapsible-header i{
 	font-size: 1.2rem !important;
 }
 */
