--- a/ipu/templates/faculty/home.html
+++ b/ipu/templates/faculty/home.html
@@ -130,6 +130,7 @@
 			{% endfor %}
 		{% endif %}
 		<div class="row" id="student-div">
+			<p style="display: none" class="info">{# include 'info/verify.html' #}</p>
 			<div class="vertical-tabs">
 				<div class="row">
 					<div class="col s3">
@@ -143,7 +144,7 @@
 						</ul>
 					</div>
 					<div class=" col s8 offset-s1">
-						<div class="col s12 m10 offset-s1 card-panel" id="enrollment-div">
+						<div class="col s12 m10 offset-m1 card-panel" id="enrollment-div">
 							<h4 class="row center" style="color: goldenrod">Verify Student</h4>
 								<form action="{% url 'verify' %}" id="enroll-form">
 									{% csrf_token %}
