post_signup changed

--- a/ipu/templates/account/base_home_layout.html
+++ b/ipu/templates/account/base_home_layout.html
@@ -136,6 +136,22 @@
 
 <!--sidebar ends-->
 
+<!--notification-sidebar begins-->
+
+ <ul id="slide-out" class="side-nav">
+ 	<li>
+		<div class="userView">
+			<div class="background">
+				<img src="{% static 'images/bgs2.jpg' %}" width="100%">
+			</div>
+		</div>
+	</li>
+	
+  </ul>
+
+<!--sidebar ends-->
+
+
 
 
         <main>
