--- a/ipu/templates/account/base.html
+++ b/ipu/templates/account/base.html
@@ -8,13 +8,13 @@
 		<link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome.min.css' %}" />
 		<link type="text/css" rel="stylesheet" href="{% static 'account/css/base.css' %}" />
 		<link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" >
-		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-		<link rel="manifest" href="favicon/manifest.json">
-		<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#0071b0">
-		<link rel="shortcut icon" href="favicon/favicon.ico">
-		<meta name="msapplication-config" content="favicon/browserconfig.xml">
+		<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+		<link rel="manifest" href="/favicon/manifest.json">
+		<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#0071b0">
+		<link rel="shortcut icon" href="/favicon/favicon.ico">
+		<meta name="msapplication-config" content="/favicon/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
 		{% include 'material/includes/material_css.html' %}
 		{% block head %}{% endblock head %}
